--- 3.0.41 2008/12/29

Fixed Fixed test that makes VERSION_SHA1 appear on dist versions too.

--- 3.0.40 2008/12/29

For configure, using option --without-xml2 also disables Libxslt/Libexslt
support.

Fixed bug #2352: yaz-marcdump crashes for certain record.

Added man page 'bib1-attr' which includes list of common Bib-1 attributes.

Added support for Danmarc2 to UTF-8 conversion.

Added support for ISO5426 to UTF-8 conversion.

zget_InitRequest/zget_InitResponse returns GIT SHA1 hash as part of 
implementation version.

Function yaz_version returns GIT SHA1 hash for parameter sha1_str.

--- 3.0.38 2008/11/10

ZOOM C now only fires one ZOOM_EVENT_SEARCH per search-task. Previously,
ZOOM_EVENT_SEARCH was fired for each searchRetrieve Response received.

ZOOM C now interprets databaseName option for ZOOM connection as path
(SRU "database").

Windows version bundled with Libxml2 2.7.1 / Libxslt 1.1.24 / ICU 4.0.

Fixed CCL to RPN/PQF conversion which could result in invalid PQF.

Dummy Libxml2 types no longer defined in headers of YAZ'.

Fixed memory violation for ZOOM C - could occur when SRU diagnostics was
received.

--- 3.0.36 2008/09/26

Various ODR chapter fixes.

Windows version uses libxml2 2.6.32+, libxslt 1.1.23+ and ICU 4.0.

Added missing source for Windows compilation, mutex.c.

Fixed compilation of YAZ for Visual Studio 2008. Bug #2256.

For SRU connections in ZOOM all records up to "count" are now fetched.

Fixed crash in generic frontend server (and yaz-ztest) which occurred
in Windows due to bad error handling for Libxml2.

Added facility for sending arbitrary records (ASN.1 any) using
ZOOM C's Extended service update. Patch by Sam Reynolds.

New options for ZOOM C's connection, logapdu which makes ZOOM log
APDUs.

--- 3.0.34 2008/06/18

YAZ uses GNU TLS without the OpenSSL compatibility wrapper.

--- 3.0.32 2008/06/12

Fixed memory violation that could occur when decoding UTF-8. This bug
was only present in 3.0.30 of YAZ.

--- 3.0.30 2008/06/06
